--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                         <a class="nav-link fs-6" href="#">Pós-Graduação</a>
                     </li>
                 </ul>
-                <a href="pages/login.html" class="btn btn-outline-primary" type="submit">login<a>
+                <a href="pages/login.html" class="btn btn-outline-primary me-3" type="submit">login<a>
+                    <a href="pages/cadastro.html" class="btn" style="outline: 1px solid #07a80ff6; color: #07a80ff6;" type="submit">Cadastro<a>
             </div>
         </div>
     </nav>
@@ -149,17 +150,17 @@
                     <p class="text-light">Acesso ilimitado a mais de 7.000 cursos de nível mundial, projetos práticos e programas de certificado prontos para o merdado de trabalho, por um preço de assinatura com tudo incluso</p>
                 </section>
                 <section class="mb-3">
-                    <a href="" class="linkAnuncio">US$ 59/mês. pode ser cancelado a qualquer momento</a>
+                    <a href="pages/cadastro.html" class="linkAnuncio">US$ 59/mês. pode ser cancelado a qualquer momento</a>
                 </section>
 
                 <section class="mb-3">
-                    <button class="btn btn-outline-light">
+                    <a href="pages/cadastro.html" class="btn btn-outline-light">
                         Iniciar avaliação gratuita de 7 dias
-                    </button>
+                    </a href="pages/cadastro.html">
                 </section>
 
                 <section  class="mb-3">
-                    <a href="" class="linkAnuncio">ou US$ 399/ano, com garantia de 14 dias para devolução do dinheiro </a>
+                    <a href="pages/cadastro.html" class="linkAnuncio">ou US$ 399/ano, com garantia de 14 dias para devolução do dinheiro </a>
                 </section>
 
             </div>
