--- a/pages/universidades.html
+++ b/pages/universidades.html
@@ -40,7 +40,8 @@
                         <a class="nav-link fs-6" href="#">Pós-Graduação</a>
                     </li>
                 </ul>
-                <a href="login.html" class="btn btn-outline-primary" type="submit">login</a>
+                <a href="login.html" class="btn btn-outline-primary me-3" type="submit">login</a>
+                <a href="cadastro.html" class="btn" style="outline: 1px solid #07a80ff6; color: #07a80ff6;" type="submit">Cadastro<a>
             </div>
         </div>
     </nav>
@@ -48,7 +49,7 @@
     <!-- ********************* MAIN ************************** -->
 
     <main class="container-fluid">
-        <div class="row d-flex justify-content-around" id = "listas">
+        <div class="row d-flex justify-content-between border border-danger g-3" id = "listas">
 
         </div>
     </main>
