ALteração na validação do cadastro

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -49,125 +49,173 @@
     <main class="container Cadastro">
         <h1 class="text-center my-5">Informações pessoais</h1>
 
-        <form action="#">
-            <!-- CAMPOS DE CONTATOS PESSOAIS -->
-            <div>
-                <!-- CAMPO DE TEXTO:NOME  E SOBRENOME-->
-                <section class="row mb-3">
-                    <div class="col-6">
-                        <input type="text" id="nome" name="nome" class="form-control" placeholder="Nome">
-                    </div>
-                    <div class="col-6">
-                        <input type="text" id="nome" name="nome" class="form-control" placeholder="Sobrenome">
-                    </div>
-                </section>
+        <!-- CAMPOS DE CONTATOS PESSOAIS -->
+        <form class="row g-3 needs-validation" novalidate>
 
-                <!-- CAMPO IDADE -->
-                <section class="row mb-3">
-                    <div class="col-12">
-                        <input type="number" name="idade" id="idade" class="form-control" placeholder="Idade">
-                    </div>
-                </section>
-                <!-- CAMPO ENDEREÇO -->
-                <section class="row mb-3">
-                    <div class="col-6">
-                        <input type="text" id="Rua" name="Rua" class="form-control" placeholder="Rua">
-                    </div>
-                    <div class="col-6">
-                        <input type="text" id="Numero" name="Numero" class="form-control" placeholder="Número da Casa">
-                    </div>
-                    <div class="col-12 mt-3">
-                        <input type="text" id="Bairro" name="Bairro" class="form-control" placeholder="Bairro">
-                    </div>
-                </section>
-
-                <!-- CAMPO TEL -->
-                <section class="row mb-3">
-                    <div class="col-12 input-group">
-                        <input type="tel" name="tel" id="tel" class="form-control " placeholder="Celular"
-                            maxlength="13">
-                    </div>
-                </section>
-                <!-- CAMPO GENERO -->
-                <section class="row mb-3 ">
-                    <div class="col-12 input-group">
-                        <select name="genero" id="genero" class="form-select">
-                            <option value="">Gênero</option>
-                            <option value="Masculino">Masculino</option>
-                            <option value="Feminino">Feminino</option>
-                            <option value="Outros">Outros</option>
-                        </select>
-                    </div>
-                </section>
-                <!-- CAMPO DATA DE NASCIMENTO -->
-                <section class="row mb-3">
-                    <div class="col-12 ">
-                        <label for="data">Data de Nascimento</label>
-                        <input type="date" name="data" id="data" class="form-control " placeholder="dd/mm/aaaa">
-                    </div>
-                </section>
-
-                <div class="col-6 mx-auto my-3">
-                    <button type="submit" class="btn btn-primary col-12">Cadastrar</button>
+            <div class="col-md-6">
+                <label for="validationCustom01" class="form-label">Nome</label>
+                <input type="text" class="form-control" id="validationCustom01" required>
+                <div class="valid-feedback">
+                    Looks good!
                 </div>
-
-
             </div>
 
-            <!-- CAMPOS DE CARTÃO -->
-            <div>
-                <section class="row mb-3">
-                    <div class="col-12 input-group">
-                        <input type="text" name="cartao" id="cartao" placeholder="N° do cartão" class="form-control"
-                            maxlength="19">
-                    </div>
-                </section>
-
-                <!-- CAMPO CPF -->
-                <section class="row mb-3">
-                    <div class="col-12 input-group">
-                        <input type="text" name="cpf" id="cpf" class="form-control " placeholder="CPF" maxlength="14">
-                    </div>
-                </section>
-
-                <section class="row mb-3">
-                    <div class="col-6 ">
-                        <label for="validade"> Data de vencimento</label>
-                        <input type="month" name="validade" id="validade" placeholder="Data de Validade"
-                            class="form-control">
-                    </div>
-
-                    <div class="col-6 ">
-                        <label for="cod">Código de segurança</label>
-                        <input type="text" name="cod" id="cod" placeholder="123" class="form-control" maxlength="3">
-                    </div>
-                </section>
+            <div class="col-md-6">
+                <label for="sobrenome" class="form-label">Sobrenome</label>
+                <input type="text" class="form-control" id="sobrenome" required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
             </div>
 
-            <!-- FINALIZANDO CADASTRO -->
-            <div>
-                <!-- CAMPO DE EMAIL: EMAIL -->
-                <section class="row mb-3">
-                    <div class="col-12">
-                        <input type="email" id="email" name="email" class="form-control" placeholder="Email">
+            <!-- <div class="col-md-4">
+                  <label for="validationCustomUsername" class="form-label">Email</label>
+                  <div class="input-group has-validation">
+                    <span class="input-group-text" id="inputGroupPrepend">@</span>
+                    <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+                    <div class="invalid-feedback">
+                      Please choose a username.
                     </div>
-                </section>
+                  </div>
+                </div> -->
 
-                <!-- CONFIRMAÇÃO DE EMAIL -->
-                <section class="row mb-3">
-                    <div class="col-12">
-                        <input type="email" id="confirmacao" name="confirmacao" class="form-control" placeholder="Confirmação de Email" disabled>
-                    </div>
-                </section>
+            <div class="col-md-6">
+                <label for="rua" class="form-label">Rua</label>
+                <input type="text" class="form-control" id="rua" required>
+                <div class="invalid-feedback">
+                    Coloque uma Rua Valida.
+                </div>
+            </div>
 
-                <!-- CAMPO DE EMAIL: EMAIL -->
-                <section class="row mb-3">
-                    <div class="col-12">
-                        <input type="password" id="senha" name="senha" class="form-control" placeholder="Password">
+            <div class="col-md-6">
+                <label for="numero" class="form-label">Numero da casa</label>
+                <input type="number" name="" id="numero" class="form-control">
+            </div>
+
+            <div class="col-md-12">
+                <label for="bairro" class="form-label">Bairro</label>
+                <input type="text" class="form-control" id="bairro" required>
+                <div class="invalid-feedback">
+                    Coloque um bairro Valida.
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <label for="tel" class="form-label">Telefone</label>
+                <input type="tel" class="form-control" id="tel" required maxlength="13">
+                <div class="invalid-feedback">
+                    Coloque um telefone valido.
+                </div>
+            </div>
+
+
+            <div class="col-md-3">
+                <label for="idade" class="form-label">Idade</label>
+                <input type="number" name="" id="idade" class="form-control">
+            </div>
+
+            <div class="col-md-3">
+                <label for="genero" class="form-label">Gênero</label>
+                <select class="form-select" id="genero" required>
+                    <option value="">Escolha um opção...</option>
+                    <option value="masculino">Masculino</option>
+                    <option value="feminino">Feminino</option>
+                    <option value="outros">Outros</option>
+                    <option>...</option>
+                </select>
+                <div class="invalid-feedback">
+                    Arruma isso ai sio.
+                </div>
+            </div>
+
+            <div class="col-md-12">
+                <label for="data" class="form-label">Data de nascimento</label>
+                <input type="text" class="form-control" id="data" required>
+                <div class="invalid-feedback">
+                    Coloque um bairro Valida.
+                </div>
+            </div>
+
+            <div class="col-12">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                    <label class="form-check-label" for="invalidCheck">
+                        Concorde com os termos e condições
+                    </label>
+                    <div class="invalid-feedback">
+                        Você deve concordar antes de enviar.
                     </div>
-                </section>
+                </div>
+            </div>
+            <div class="col-6 mx-auto my-3">
+                <button class="btn btn-primary col-12" type="submit">Próximo</button>
             </div>
         </form>
+
+        <!-- CAMPOS DE CARTÃO -->
+        <div id="infoCartao">
+            <section class="row mb-3">
+                <div class="col-12 input-group">
+                    <input type="text" name="cartao" id="cartao" placeholder="N° do cartão" class="form-control"
+                        maxlength="19">
+                </div>
+            </section>
+
+            <!-- CAMPO CPF -->
+            <section class="row mb-3">
+                <div class="col-12 input-group">
+                    <input type="text" name="cpf" id="cpf" class="form-control " placeholder="CPF" maxlength="14">
+                </div>
+            </section>
+
+            <section class="row mb-3">
+                <div class="col-6 ">
+                    <label for="validade"> Data de vencimento</label>
+                    <input type="month" name="validade" id="validade" placeholder="Data de Validade"
+                        class="form-control">
+                </div>
+
+                <div class="col-6 ">
+                    <label for="cod">Código de segurança</label>
+                    <input type="text" name="cod" id="cod" placeholder="123" class="form-control" maxlength="3">
+                </div>
+            </section>
+
+
+            <div class="col-6 mx-auto my-3">
+                <button type="submit" class="btn btn-primary col-12" id="next">Próximo</button>
+            </div>
+        </div>
+
+        <!-- FINALIZANDO CADASTRO -->
+        <div id="infoFinalizando">
+
+            <!-- CAMPO DE EMAIL: EMAIL -->
+            <section class="row mb-3">
+                <div class="col-12">
+                    <input type="email" id="email" name="email" class="form-control" placeholder="Email">
+                </div>
+            </section>
+
+            <!-- CONFIRMAÇÃO DE EMAIL -->
+            <section class="row mb-3">
+                <div class="col-12">
+                    <input type="email" id="confirmacao" name="confirmacao" class="form-control"
+                        placeholder="Confirmação de Email" disabled>
+                </div>
+            </section>
+
+            <!-- CAMPO DE EMAIL: EMAIL -->
+            <section class="row mb-3">
+                <div class="col-12">
+                    <input type="password" id="senha" name="senha" class="form-control" placeholder="Password">
+                </div>
+            </section>
+
+            <div class="col-6 mx-auto my-3">
+                <a href="finalizar.html" class="btn btn-primary col-12" id="finalizar">Finalizar</a>
+            </div>
+        </div>
 
 
     </main>
