--- a/pages/login.html
+++ b/pages/login.html
@@ -36,9 +36,6 @@
                     <li class="nav-item">
                         <a class="nav-link active fs-6" href="universidades.html">Universidades</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link fs-6" href="#">Pós-Graduação</a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -59,7 +56,7 @@
             <div class="col-lg-4 col-sm-12">
                 <form class="form-control">
             
-                    <h2 style="font-family: 'Courier New', Courier, monospace;">LOGIN</h2>
+                    <h2 style="font-family: Arial, Helvetica, sans-serif; padding: 20px 0;">LOGIN</h2>
                     <section class="mb-3">
                         <input type="text" class="form-control" placeholder="Email">
                     </section>
@@ -74,7 +71,7 @@
                         </button>
                     </section>
                     <section class="d-flex justify-content-center my-2">
-                        <a href="cadastro.html" type="button" class="btn cadastro">
+                        <a href="cadastro.html" type="button" class="btn btncadastro">
                             Cadastro
                         </a>
                     </section>
