Finalizador projeto final

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -46,6 +46,7 @@
     <main class="container Cadastro">
         <h1 class="text-center my-5">Informações pessoais</h1>
 
+     
         <!-- CAMPOS DE CONTATOS PESSOAIS -->
         <form action="cadCartao.html" class="row g-3 needs-validation" id="formPessoal" novalidate>
 
@@ -126,6 +127,11 @@
                 <button class="btn btn-primary col-12" type="submit">Próximo</button>
             </div>
         </form>
+
+        <div class="progress my-5" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar" style="width: 30%">35%</div>
+          </div>
+
 
     </main>
 
