--- a/pages/universidades.html
+++ b/pages/universidades.html
@@ -46,7 +46,7 @@
     <!-- ********************* MAIN ************************** -->
 
     <main class="container-fluid">
-        <div class="row d-flex justify-content-between border border-danger g-3" id = "listas">
+        <div class="row d-flex justify-content-betweeng-3" id = "listas">
 
         </div>
     </main>
