--- a/pages/cadCartao.html
+++ b/pages/cadCartao.html
@@ -89,6 +89,10 @@
             </div>
         </form>
 
+        <div class="progress my-5" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar" style="width: 70%">70%</div>
+          </div>
+
     </main>
 
     <!-- ************************ FOOTER ************************ -->
@@ -136,7 +140,7 @@
 
     <script src="../js/script.js"></script>
 
-    <script src="../js/pageCadastro.js"></script>
+    <script src="../js/pageCadcartao.js"></script>
 </body>
 
 </html>
