--- a/pages/cadFinal.html
+++ b/pages/cadFinal.html
@@ -61,10 +61,10 @@
             </div>
 
             <div class="col-md-12">
-                <label for="Confirmação" class="form-label">Confirmação de email</label>
+                <label for="confirmar" class="form-label">Confirmação de email</label>
                 <div class="input-group has-validation">
                     <span class="input-group-text" id="inputGroupPrepend">@</span>
-                    <input type="text" class="form-control" id="Confirmação" aria-describedby="inputGroupPrepend"
+                    <input type="text" class="form-control" id="confirmar" aria-describedby="inputGroupPrepend"
                         disabled>
                 </div>
             </div>
@@ -91,6 +91,10 @@
                     <button class="btn btn-primary col-12" type="submit">Finalizar</button>
                 </div>
         </form>
+
+        <div class="progress my-5" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar" style="width: 99%">99%</div>
+          </div>
 
     </main>
 
@@ -139,7 +143,7 @@
 
     <script src="../js/script.js"></script>
 
-    <script src="../js/pageCadastro.js"></script>
+    <script src="../js/pageCadfinal.js"></script>
 </body>
 
 </html>
