--- a/pages/finalizar.html
+++ b/pages/finalizar.html
@@ -29,15 +29,19 @@
     </nav>
 
     <!-- ********************* MAIN ************************** -->
-    <main class="final">
+    <main class="container-fluid final">
         <div class="row d-flex">
-            <figure class="w-25">
+
+            <figure class=" justify-content-center">
                 <img src="../assets/image/login/logo coursera.svg" alt="">
             </figure>
 
-            <div class="">
-                <h1>Seu Cadastro foi realizado com sucesso</h1>
+            <div class=" d-flex finaldiv align-items-center justify-content-center">
+                <h1 class="" >Seu Cadastro foi realizado com sucesso</h1>
             </div>
+            <div class="progress my-5" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" style="width: 100%">100%</div>
+              </div>
         </div>
 
         
